# velochain

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
client-sdk/: package.json  tsconfig.json
client-sdk/src/: index.ts  rpc.ts  session.ts  types.ts  wallet.ts  websocket.ts
crates/consensus/: Cargo.toml
crates/consensus/src/: error.rs  lib.rs  poa.rs  tests.rs  validator_manager.rs
crates/evm/: Cargo.toml
crates/evm/src/: error.rs  executor.rs  lib.rs  tests.rs
crates/game-client/: Cargo.toml
crates/game-client/src/: camera.rs  camera_effects.rs  lib.rs  main.rs  network.rs  particles.rs  renderer.rs  sound.rs  states.rs  terrain_render.rs  touch_input.rs  ui.rs  ui_panels.rs
crates/game-engine/: Cargo.toml
crates/game-engine/src/: combat.rs  crafting.rs  ecs.rs  error.rs  events.rs  game_api_types.rs  items.rs  lib.rs  npc_ai.rs  quests.rs  shops.rs  skills.rs  systems.rs  terrain.rs  trading.rs  world.rs
crates/network/: Cargo.toml
crates/network/src/: error.rs  lib.rs  multinode_tests.rs  peer_manager.rs  protocol.rs  service.rs  sync.rs
crates/node/: Cargo.toml
crates/node-cli/: Cargo.toml
crates/node-cli/src/: main.rs
crates/node/src/: block_producer.rs  chain.rs  config.rs  config_file.rs  error.rs  lib.rs  logging.rs  metrics.rs  reorg.rs  shutdown.rs  snapshot.rs
crates/node/tests/: integration_test.rs  integration_tests.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: account.rs  block.rs  crypto.rs  error.rs  genesis.rs  lib.rs  transaction.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: admin_api.rs  error.rs  eth_api.rs  game_api.rs  lib.rs  server.rs  session.rs  subscriptions.rs
crates/state/: Cargo.toml
crates/state/src/: error.rs  lib.rs  world_state.rs
crates/storage/: Cargo.toml
crates/storage/src/: batch.rs  cache.rs  db.rs  error.rs  lib.rs  pruning.rs  tables.rs
crates/txpool/: Cargo.toml
crates/txpool/src/: error.rs  lib.rs  pool.rs  tests.rs
docs/: API.md  CLIENT_PROTOCOL.md
examples/web-client/: README.md  index.html
