[workspace]
resolver = "2"
members = [
    "crates/primitives",
    "crates/storage",
    "crates/state",
    "crates/consensus",
    "crates/network",
    "crates/evm",
    "crates/game-engine",
    "crates/txpool",
    "crates/rpc",
    "crates/node",
    "crates/node-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/velochain/velochain"

[workspace.dependencies]
# Ethereum / EVM
revm = { version = "19", default-features = false, features = ["std"] }
alloy-primitives = { version = "0.8", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
sha3 = "0.10"
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"

# Storage
rocksdb = { version = "0.22", default-features = false }

# Networking
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad", "identify", "tokio", "macros"] }

# RPC
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1"

# Trie
hash-db = "0.16"
reference-trie = "0.29"
trie-db = "0.29"
memory-db = "0.32"

# Logging / Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus = { version = "0.13", default-features = false }

# Async
futures = "0.3"
async-trait = "0.1"

# Utils
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
bytes = "1"
parking_lot = "0.12"
dashmap = "6"
chrono = "0.4"
derive_more = { version = "1", features = ["display", "from"] }

# Workspace crates
velochain-primitives = { path = "crates/primitives" }
velochain-storage = { path = "crates/storage" }
velochain-state = { path = "crates/state" }
velochain-consensus = { path = "crates/consensus" }
velochain-network = { path = "crates/network" }
velochain-evm = { path = "crates/evm" }
velochain-game-engine = { path = "crates/game-engine" }
velochain-txpool = { path = "crates/txpool" }
velochain-rpc = { path = "crates/rpc" }
velochain-node = { path = "crates/node" }
