[package]
name = "velochain-game-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic game engine for VeloChain - world simulation, physics, NPCs"

[dependencies]
velochain-primitives = { workspace = true }
velochain-state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
alloy-primitives = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
sha3 = { workspace = true }
