[package]
name = "velochain-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core primitive types for VeloChain - Block, Transaction, Address, Hash"

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
k256 = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
rand = { workspace = true }
